# server.js
@@ -22,6 +22,7 @@ app.use((err, req, res, next) => {
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use('/products', require('./routes/products'));
 app.use('/orders', require('./routes/orders'));
+app.use('/reviews', require('./routes/reviews'));
 
 app.get('/', (req, res) => {
     res.send('Welcome to the NextGen E-Commerce API');
